k8s-test/11.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    id: ds-improtant
    uuid: 18426a0b-5f59-4e10-923f-c0e078e82462
  name: ds-improtant
spec:
  selector:
    matchLabels:
      id: ds-improtant
      uuid: 18426a0b-5f59-4e10-923f-c0e078e82462
  template:
    metadata:
      creationTimestamp: null
      labels:
        id: ds-improtant
        uuid: 18426a0b-5f59-4e10-923f-c0e078e82462
    spec:
      containers:
      - image: httpd:2.4-alpine
        name: httpd
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
