k8s-test/13.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mult-container-playground
  name: mult-container-playground
spec:
  containers:
  - image: nginx:1.17.6-alpine
    name: c1
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /vp;
  - image: busybox
    name: c2
    command: ["sh", "-c", "while true; do date >> /vol/date.log; sleep 600; done"]
    volumeMounts:
    - name: vol
      mountPath: /vol
  - image: busybox
    name: c3
    command: ["sh", "-c", "tail -f /vol/date.log"]
    volumeMounts:
    - name: vol
      mountPath: /vol
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: vol
      emptyDir: {}
status: {}
