k8s-test/19.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: secret-pod
  name: secret-pod
spec:
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/master
  containers:
  - args:
    - sh
    - -c
    - sleep 5d
    image: busybox
    name: secret-pod
    resources: {}
    volumeMounts:
    - name: secret1
      mountPath: /tmp/secret1
      readOnly: true
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: secret1
    secret:
      secretName: secret1
status: {}
