k8s-test/test-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test-nginx
  name: test-nginx
spec:
  containers:
  - image: nginx
    name: test-nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
