k8s-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-am-i-ready
  labels:
    id: cross-server-ready
spec:
  ports:
    - protocol: TCP
      port: 80
