k8s-test/24_np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  namespace: project-snake
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Egress            # policy is only about Egress
  egress:
    -                   # first rule
      to:               # first condition "to"
      - podSelector:
          matchLabels:
            app: db1
      ports:            # second condition "port"
      - protocol: TCP
        port: 1111
    -                   # second rule
      to:               # first condition "to"
      - podSelector:
          matchLabels:
            app: db2
      ports:            # second condition "port"
      - protocol: TCP
        port: 2222
